--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -182,6 +182,10 @@ a:hover {
   font-size: 0.75rem;
 }
 
+.footerLink {
+  margin-right: 1rem;
+}
+
 /*-----------------------------------------*/
 .underlined {
   text-decoration: underline;
